feature: extended common markup and styles

--- a/app/scss/base/_common.scss
+++ b/app/scss/base/_common.scss
@@ -64,6 +64,7 @@ button {
     background: transparent;
     letter-spacing: 0.4px;
     line-height: 1;
+    user-select: none;
     &:focus,&:active  {
       appearance: none;
       outline:none;
