--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,9 +4,10 @@
 @import 'base/mixins';
 @import 'base/common';
 @import 'header/header';
-@import 'modules/task-common';
+@import 'modules/todo-common';
 @import 'modules/controls-main';
 @import 'modules/task';
+@import 'modules/controls-secondary';
 @import 'footer/footer';
 
 
