--- a/app/scss/modules/_task.scss
+++ b/app/scss/modules/_task.scss
@@ -7,7 +7,10 @@
     }
 }    
 .tasks-wrap {
-    
+    @media screen and (min-width: 768px) {
+        position: relative;
+        z-index: 3;
+    }
     &:not(:last-child) {
         margin-bottom: 10px;
     }
