feature implemented edit mode

--- a/app/scss/modules/_task.scss
+++ b/app/scss/modules/_task.scss
@@ -141,7 +141,7 @@
     .edit-name-field, .btn-save, .btn-cancel {
         display: flex;
     }
-    .name-field, .task-info, .btn-status, .btn-edit, .btn-delete-item, .btn-status-complete {
+    .name-field, .btn-status, .btn-edit, .btn-delete-item, .btn-status-complete {
         display: none;
     }
 }
