feature: implemented save functionality

--- a/app/scss/modules/_task.scss
+++ b/app/scss/modules/_task.scss
@@ -130,6 +130,9 @@
         style: italic;
         size: 1rem;
     }
+    .date-edit {
+        padding-left: 10px;
+    }
 }
 .edit-name-field {
     display: none;
