fix: refactoring and implemented singleton for task manager

--- a/app/scss/modules/_controls-secondary.scss
+++ b/app/scss/modules/_controls-secondary.scss
@@ -8,7 +8,7 @@
         bottom:60px;
     }
     &.fixed {
-        bottom:0;
+        bottom:72px;
         transition: all .1s;
         padding-bottom: 5px;
     }
