--- a/app/scss/footer/_footer.scss
+++ b/app/scss/footer/_footer.scss
@@ -4,7 +4,7 @@ footer {
     padding: 30px;
     font-size: 1.2rem;
     @media screen and (max-width: 767px) {
-        padding: 15px 0;
+        display: none;
     }
     .copyright {
         display: flex;
