--- a/app/scss/modules/_controls-secondary.scss
+++ b/app/scss/modules/_controls-secondary.scss
@@ -11,6 +11,9 @@
         bottom:72px;
         transition: all .1s;
         padding-bottom: 5px;
+        @media screen and (max-width: 767px) {
+            bottom:0;
+        }
     }
     .btn-group {
         align-items: flex-end;
